fix: - fix wrong padding in Advantages

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #141414;
 
-    padding: 105px 120px 62px 120p;
+    padding: 105px 120px 62px 120px;
 
     display: flex;
     flex-direction: column;
